feat(reservation): add endpoint for project reservation info and enhance reservation calculations